<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainPromptMarginTop"
        android:text="@string/mainPromptText"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainPromptMarginTop"
        android:hint="@string/searchLineHintText"
        android:textAlignment="textStart" />

    <include
        android:id="@+id/mFIncludedLoadingLayout"
        layout="@layout/loading_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/searchButtonMarginTop"
        android:text="@string/searchButtonText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragmentRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recyclerViewMarginTop"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</androidx.appcompat.widget.LinearLayoutCompat>