<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieInfoContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/loadingLayoutDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movieDetailsScrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="invisible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movieTitleDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mainHeaderMarginTop"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/mainHeaderTextSize" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movieDetailsPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center" />

            <TableLayout
                android:id="@+id/movieInfoTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/movieInfoTablePaddingHorizontal"
                android:layout_marginTop="@dimen/movieInfoTableMarginTop"
                android:layout_marginBottom="@dimen/movieInfoTableMarginBottom">

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movieTaglineLabelText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movieTaglineDataText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/movieInfoTablePaddingHorizontal"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                </TableRow>

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movieGenreLabelText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movieGenreDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/movieInfoTablePaddingHorizontal"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                </TableRow>

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movieReleaseDateLabelText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movieReleaseDateDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/movieInfoTablePaddingHorizontal"
                        android:textSize="@dimen/movieInfoTableTextSize" />
                </TableRow>

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movieVoteAverageLabelText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movieVoteAverageDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/movieInfoTablePaddingHorizontal"
                        android:textSize="@dimen/movieInfoTableTextSize" />

                </TableRow>

            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>

